[tool.poetry]
name = "causality"
version = "0.1.0"
description = ""
authors = ["Daniel Lawson <52593003+danlsn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
minio = "^7.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
