[tool.poetry]
name = "causality"
version = "0.1.0"
description = ""
authors = ["Daniel Lawson <52593003+danlsn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
minio = "^7.2.7"
typer = "^0.12.3"
python-slugify = "^8.0.4"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.4.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
